--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
                     <source>1.8</source>
                     <target>1.8</target>
                 </configuration>
+                <version>3.8.0</version>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -37,7 +38,7 @@
                     <!--соотношение потоков на cpu (Default true)-->
                     <perCoreThreadCount>false</perCoreThreadCount>
                     <!--макисмальное число потоков-->
-                    <threadCount>3</threadCount>
+                    <threadCount>1</threadCount>
 
                     <!--if parallel All = threadCount, classes = threadCountClasses, methods = threadCountMethods-->
                     <!--<useUnlimitedThreads>true</useUnlimitedThreads>-->
@@ -58,12 +59,8 @@
             <artifactId>selenium-java</artifactId>
             <version>3.14.0</version>
         </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.12</version>
-            <scope>compile</scope>
-        </dependency>
     </dependencies>
-
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 </project>
